<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.create.CreateRecipeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/add_recipe_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:background="#dddddd"
            android:contentDescription="@string/add_recipe_image"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add_photo_24" />


        <LinearLayout
            android:id="@+id/linearLayoutPhotoSelector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B3000000"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:visibility="gone">

            <Button
                android:id="@+id/buttonCamera"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/camera"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="8pt" />

            <Button
                android:id="@+id/buttonGallery"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/gallery"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="8pt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_recipe_image"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edt_layout_food_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:hint="@string/food_name"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_food_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColorHint="#757575"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/edt_food_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp" />
            </LinearLayout>

            <com.ernestoyaquello.dragdropswiperecyclerview.DragDropSwipeRecyclerView
                android:id="@+id/ingredient_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:item_layout="@layout/step_list_item" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_layout_ingredient"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:hint="@string/ingredient"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="10"
                    android:minLines="4"
                    android:scrollbars="vertical"
                    android:textColorHint="#757575"
                    tools:ignore="RtlHardcoded,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_ingredient"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/new_text" />

                <Button
                    android:id="@+id/update_ingredient"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/update" />

                <Button
                    android:id="@+id/delete_ingredient"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/delete" />
            </LinearLayout>

            <com.ernestoyaquello.dragdropswiperecyclerview.DragDropSwipeRecyclerView
                android:id="@+id/step_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:item_layout="@layout/step_list_item" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_layout_step"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:hint="@string/step"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="10"
                    android:minLines="4"
                    android:scrollbars="vertical"
                    android:textColorHint="#757575"
                    tools:ignore="RtlHardcoded,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_step"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/new_text" />

                <Button
                    android:id="@+id/update_step"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/update" />

                <Button
                    android:id="@+id/delete_step"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/delete" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutField"
            android:layout_margin="10dp"
            android:text="@string/save" />
    </RelativeLayout>

</ScrollView>